--- a/.eslintrc
+++ b/.eslintrc
@@ -42,6 +42,7 @@
           }
         ],
         "react-hooks/rules-of-hooks": "error",
-        "react-hooks/exhaustive-deps": "warn"
-    }
+        "react-hooks/exhaustive-deps": "warn",
+        "@typescript-eslint/no-var-requires": 0
+          }
 }
