--- a/package.json
+++ b/package.json
@@ -2,9 +2,12 @@
   "name": "components",
   "main": "index.ts",
   "scripts": {
-    "build": "npm run lint && webpack --mode production",
     "start": "webpack serve --env development",
-    "lint": "eslint --ext .js,.jsx,.ts,.tsx src --fix"
+    "lint": "eslint --ext .js,.jsx,.ts,.tsx src --fix",
+    "build": "npm run build:client & npm run build:server",
+    "build:client": "webpack --config config/webpack.client.js",
+    "build:server": "webpack --config config/webpack.server.js",
+    "start:server": "nodemon dist/server/main.js"
   },
   "author": "Alina",
   "license": "ISC",
@@ -14,6 +17,7 @@
     "@babel/preset-env": "^7.14.8",
     "@babel/preset-react": "^7.14.5",
     "@babel/preset-typescript": "^7.15.0",
+    "@types/express": "^4.17.13",
     "@types/react": "^17.0.16",
     "@types/react-dom": "^17.0.9",
     "@types/react-router-dom": "^5.1.8",
@@ -22,7 +26,6 @@
     "@typescript-eslint/parser": "^4.29.0",
     "babel-loader": "^8.2.2",
     "clean-webpack-plugin": "^4.0.0-alpha.0",
-    "copy-webpack-plugin": "^9.0.1",
     "css-loader": "^6.2.0",
     "dotenv-webpack": "^7.0.3",
     "eslint": "^7.32.0",
@@ -36,25 +39,30 @@
     "eslint-plugin-react-hooks": "^4.2.0",
     "eslint-webpack-plugin": "^3.0.1",
     "html-webpack-plugin": "^5.3.2",
-    "mini-css-extract-plugin": "^2.1.0",
     "node-sass": "^6.0.1",
+    "nodemon": "^2.0.12",
+    "null-loader": "^4.0.1",
     "prettier": "^2.3.2",
     "sass-loader": "^12.1.0",
     "typescript": "^4.3.5",
-    "webpack": "^5.47.0",
     "webpack-cli": "^4.7.2",
     "webpack-dev-server": "^3.11.2"
   },
   "dependencies": {
     "axios": "^0.21.1",
+    "copy-webpack-plugin": "^9.0.1",
+    "express": "^4.17.1",
     "fork-ts-checker-webpack-plugin": "^6.3.1",
+    "mini-css-extract-plugin": "^2.3.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.4",
+    "react-router": "^5.2.1",
     "react-router-dom": "^5.2.0",
     "react-transition-group": "^4.4.2",
     "redux": "^4.1.1",
     "redux-devtools-extension": "^2.13.9",
-    "redux-thunk": "^2.3.0"
+    "redux-thunk": "^2.3.0",
+    "webpack": "^5.53.0"
   }
 }
