--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "scripts": {
     "build": "npm run lint && webpack --mode production",
     "start": "webpack serve --env development",
-    "lint": "eslint --ext .js,.jsx,.ts,.tsx src --fix"
+    "lint": "eslint --ext .js,.jsx,.ts,.tsx src --fix",
+    "test": "jest",
+    "test:coverage": "jest --coverage"
   },
   "author": "Alina",
   "license": "ISC",
@@ -14,6 +16,10 @@
     "@babel/preset-env": "^7.14.8",
     "@babel/preset-react": "^7.14.5",
     "@babel/preset-typescript": "^7.15.0",
+    "@testing-library/jest-dom": "^5.14.1",
+    "@testing-library/react": "^12.1.0",
+    "@testing-library/user-event": "^13.2.1",
+    "@types/jest": "^27.0.1",
     "@types/react": "^17.0.16",
     "@types/react-dom": "^17.0.9",
     "@types/react-router-dom": "^5.1.8",
@@ -48,6 +54,7 @@
   "dependencies": {
     "axios": "^0.21.1",
     "fork-ts-checker-webpack-plugin": "^6.3.1",
+    "jest": "^27.2.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.4",
